- various fixes for grids detection and preparation - reworked the output of the messages block - fixed a typo preventing from copying default parameters from one profile to another

--- a/app/design/adminhtml/default/default/template/bl/customgrid/messages.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/messages.phtml
@@ -19,7 +19,7 @@
     <?php foreach ($this->getMessagesTypes() as $_type => $_label): ?>
         <?php if ($this->hasMessages($_type)): ?>
             <li class="blcg-no-display blcg-messages-list-wrapper blcg-messages-list-wrapper-<?php echo $_type ?>">
-                <div class="blcg-messages-list"><?php echo $this->getMessagesHtml($_type) ?></div>
+                <?php echo $this->getMessagesHtml($_type) ?>
             </li>
         <?php endif ?>
     <?php endforeach ?>
@@ -35,7 +35,7 @@
         <ul class="blcg-messages-lists">
         <?php foreach ($this->getMessagesTypes() as $_type => $_label): ?>
             <li id="blcg-messages-list-wrapper-<?php echo $_type ?>" class="blcg-no-display blcg-messages-list-wrapper blcg-messages-list-wrapper-<?php echo $_type ?>">
-                <div class="blcg-messages-list"><?php echo $this->getMessagesHtml($_type) ?></div>
+                <?php echo $this->getMessagesHtml($_type) ?>
             </li>
         <?php endforeach ?>
         </ul>
