--- a/app/design/adminhtml/default/default/template/bl/customgrid/column/renderer/collection/select.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/column/renderer/collection/select.phtml
@@ -13,32 +13,26 @@
  * @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 ?>
+<div class="nobr">
 <?php if ($this->getIsForcedRenderer()): ?>
-    <?php if ($_renderer = $this->getForcedRenderer() ): ?>
-        <div class="blcg-custom-grid-forced-renderer">
-            <input type="hidden" name="<?php echo $this->getSelectName() ?>" id="<?php echo $this->getSelectId() ?>" value="<?php echo $this->htmlEscape($_renderer['code']) ?>" />
-            <?php echo $this->htmlEscape($_renderer['name']) ?>
-            <?php if ($this->getRendererTargetName()): ?>
-                <input type="hidden" name="<?php echo $this->getRendererTargetName() ?>" id="<?php echo $this->getRendererTargetId() ?>" value="<?php echo $this->getRendererParams() ?>" />
-                <span class="blcg-collection-renderers-config-button" id="<?php echo $this->getConfigButtonId() ?>" title="<?php echo $this->__('Configuration') ?>" style="display:none;"></span>
-            <?php endif ?>
-            <span class="blcg-collection-renderers-help-button" onclick="blcgDisplayCollectionRenderersHelp();" title="<?php echo $this->__('Help') ?>"></span>
-        </div>
+    <?php if ($_renderer = $this->getRenderer() ): ?>
+        <input type="hidden" name="<?php echo $this->getSelectName() ?>" id="<?php echo $this->getSelectId() ?>" value="<?php echo $this->htmlEscape($_renderer['code']) ?>" />
+        <?php echo $this->htmlEscape($_renderer['name']) ?>
     <?php else: ?>
-        <span class="nobr"><?php echo $this->htmlEscape($this->getForcedRendererLabel()) ?></span>
+        <?php echo $this->htmlEscape($this->getForcedRendererLabel()) ?>
     <?php endif ?>
 <?php else: ?>
-    <div class="nobr">
-        <select name="<?php echo $this->getSelectName() ?>" id="<?php echo $this->getSelectId() ?>" class="<?php echo $this->getSelectClassNames() ?>">
-            <option value=""></option>
-            <?php foreach ($this->_getAvailableRenderers(true) as $_renderer): ?>
-                <option value="<?php echo $this->htmlEscape($_renderer['code']) ?>"<?php if ($this->getRendererCode() == $_renderer['code']): ?> selected="selected"<?php endif ?>><?php echo $this->htmlEscape($_renderer['name']) ?></option>
-            <?php endforeach ?>
-        </select>
-        <?php if ($this->getRendererTargetName()): ?>
-            <input type="hidden" name="<?php echo $this->getRendererTargetName() ?>" id="<?php echo $this->getRendererTargetId() ?>" value="<?php echo $this->getRendererParams() ?>" />
-            <span class="blcg-collection-renderers-config-button" id="<?php echo $this->getConfigButtonId() ?>" title="<?php echo $this->__('Configuration') ?>" style="display:none;"></span>
-            <?php if ($_jsObjectName = $this->getSelectsManagerJsObjectName()): ?>
+    <select name="<?php echo $this->getSelectName() ?>" id="<?php echo $this->getSelectId() ?>" class="<?php echo $this->getSelectClassNames() ?>">
+        <option value=""></option>
+        <?php foreach ($this->_getAvailableRenderers(true) as $_renderer): ?>
+            <option value="<?php echo $this->htmlEscape($_renderer['code']) ?>"<?php if ($this->getRendererCode() == $_renderer['code']): ?> selected="selected"<?php endif ?>><?php echo $this->htmlEscape($_renderer['name']) ?></option>
+        <?php endforeach ?>
+    </select>
+<?php endif ?>
+<?php if ($this->getRendererTargetName() && (!$this->getIsForcedRenderer() || $this->getRenderer())): ?>
+    <input type="hidden" name="<?php echo $this->getRendererTargetName() ?>" id="<?php echo $this->getRendererTargetId() ?>" value="<?php echo $this->getRendererParams() ?>" />
+    <span class="blcg-collection-renderers-config-button" id="<?php echo $this->getConfigButtonId() ?>" title="<?php echo $this->__('Configuration') ?>" style="display:none;"></span>
+    <?php if ($_jsObjectName = $this->getSelectsManagerJsObjectName()): ?>
 <script type="text/javascript">
 //<![CDATA[
 <?php echo $_jsObjectName ?>.registerSelect(
@@ -48,8 +42,7 @@
 );
 //]]>
 </script>
-            <?php endif?>
-        <?php endif ?>
-        <span class="blcg-collection-renderers-help-button" onclick="blcgDisplayCollectionRenderersHelp();" title="<?php echo $this->__('Help') ?>"></span>
-    </div>
+    <?php endif?>
+    <span class="blcg-collection-renderers-help-button" onclick="blcgDisplayCollectionRenderersHelp();" title="<?php echo $this->__('Help') ?>"></span>
 <?php endif ?>
+</div>
