--- a/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/column/filter/product/categories/chooser.phtml
+++ b/app/design/adminhtml/default/default/template/bl/customgrid/widget/grid/column/filter/product/categories/chooser.phtml
@@ -38,7 +38,7 @@
  * @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 ?>
-<?php $_jsObjectName = $this->helper('customgrid/string')->sanitizeJsObjectName($this->getJsObjectName()) ?>
+<?php $_jsObjectName = $this->getJsObjectName() ?>
 <p class="form-buttons blcg-filter-form-buttons">
     <?php echo $this->getApplyButtonHtml() ?>
 </p>
