--- a/skin/adminhtml/default/default/bl/customgrid/styles.css
+++ b/skin/adminhtml/default/default/bl/customgrid/styles.css
@@ -71,8 +71,8 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
     white-space:nowrap;
 }
 .blcg-grid-profiles-bar-button {
-    margin:0 !important;
-    padding:2px 8px 2px !important;
+    margin:0;
+    padding:2px 8px 2px;
     border-color:#ccc #aaa #aaa #ccc;
     color:#555;
 
@@ -115,8 +115,19 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
 .blcg-grid-profiles-bar-button-edit-link > span::before { content:"\f08e"; }
 .blcg-grid-profiles-bar-button-rss > span::before { content:"\f143"; }
 
+.blcg-grid-profiles-bar-button-copy_new,
+.blcg-grid-profiles-bar-button-copy_new:hover {
+    background:none;
+    border:none;
+    display:block;
+    padding-left:0;
+}
+.blcg-grid-profiles-bar-button-copy_new:hover {
+    text-shadow: -1px 1px 8px #ffc;
+}
+.blcg-grid-profiles-bar-button-copy_new > span::before { content: "\f067"; }
+
 .blcg-grid-profiles-bar-button-default > span::before { content: "\f08d";}
-.blcg-grid-profiles-bar-button-copy_new > span::before { content: "\f016"; }
 .blcg-grid-profiles-bar-button-copy_existing > span::before { content: "\f0c5"; }
 .blcg-grid-profiles-bar-button-edit > span::before { content: "\f040"; }
 .blcg-grid-profiles-bar-button-assign > span::before { content:"\f023"; }
