Button color #dddddd

--- a/skin/adminhtml/default/default/bl/customgrid/styles.css
+++ b/skin/adminhtml/default/default/bl/customgrid/styles.css
@@ -87,7 +87,7 @@ div.blcg-collapseable a.open { background:url(images/collapse_arrow_up.png) 100%
     padding:2px 6px 2px;
     background:none;
     border:none;
-    color: #ccc;
+    color: #ddd;
 }
 .blcg-grid-profiles-bar-button:hover {
     background:none;
